fix speaker popup, checkbox on mobile

--- a/web/styles/partials/common.scss
+++ b/web/styles/partials/common.scss
@@ -451,6 +451,10 @@ iframe {
     font-size: 14px;
     line-height: 18px;
     cursor: pointer;
+
+    .btn-link {
+      border-bottom-style: solid;
+    }
   }
 
   &--offer-contract {
