--- a/web/styles/partials/media.scss
+++ b/web/styles/partials/media.scss
@@ -1023,6 +1023,7 @@
 
     &__photo {
       width: 100%;
+      height: auto;
       max-width: 414px;
       margin: 0 auto;
     }
@@ -1878,6 +1879,22 @@
     &__content {
       min-height: initial;
       padding-bottom: 40px;
+    }
+  }
+
+  .checkbox {
+    &__input {
+      width: 24px;
+      height: 24px;
+    }
+
+    &__label {
+      padding-left: 38px;
+
+      .btn-link {
+        font-size: 14px;
+        line-height: 18px;
+      }
     }
   }
 }
